--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ a[href]:not([class]):hover,
 }
 
 .content-container {
-    margin: auto;
+    margin: 0 auto;
     transition: all 0.3s ease-in;
     opacity: 1;
     max-width: 500px;
