bigger categories, new name styling

--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ a[href]:not([class]):hover,
     opacity: 1;
 }
 .moment-container {
-    max-width: 500px;
+    max-width: 550px;
     opacity: 1;
 }
 
@@ -261,8 +261,6 @@ a[href]:not([class]):hover,
     letter-spacing: 1px;
     font-weight: 900;
     font-size: 14px;
-    border-style: solid;
-    border-width: .5px;
     padding: 10px;
 }
 
@@ -287,7 +285,7 @@ a[href]:not([class]):hover,
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     font-weight: 700;
-    font-size: 1em;
+    font-size: 1.3em;
 }
 
 .name {
@@ -457,11 +455,6 @@ a[href]:not([class]):hover,
    Media Queries
    ========================================================================== */
 
-@media only screen and (min-width: 850px) {
-    .intro {
-    font-size: 5em;
-}
-
 
 @media (min-width: 450px) {
     .pair-of-moments {
@@ -480,12 +473,20 @@ a[href]:not([class]):hover,
     top: -7vw;
     height: 7vw;
     }
-    .category, 
+
     .next-suggestion,
     .get-started {
-        font-size: 1em;
+    font-size: 1em;
     }
 
+    .category {
+    font-size: 2em;
+    }
+
+    @media only screen and (min-width: 850px) {
+    .category {
+    font-size: 2.5em;
+    }
 
 
 /* ==========================================================================
